[gd_scene load_steps=18 format=4 uid="uid://d2onseuhefihe"]

[ext_resource type="Material" uid="uid://bpyc72ajp6yfb" path="res://Art/Shaders/colorswap.tres" id="1_7s77y"]
[ext_resource type="Script" path="res://Scripts/world_controller.gd" id="2_fdsrf"]
[ext_resource type="Texture2D" uid="uid://cgnp0mhae3ygt" path="res://Art/Sprites/tiles.png" id="3_8l7oa"]
[ext_resource type="PackedScene" uid="uid://ccs5kw7b4231m" path="res://Scenes/Enemies/enemy_spawner_controller.tscn" id="4_ut8nn"]
[ext_resource type="AudioStream" uid="uid://cdv51tkopnod7" path="res://Audio/Music/Midnight-Cruise.mp3" id="5_pupo2"]
[ext_resource type="AudioStream" uid="uid://buybjaddur1vf" path="res://Audio/SFX/Taps.mp3" id="6_1pnk5"]
[ext_resource type="PackedScene" uid="uid://d1c2pbbb47u4h" path="res://Scenes/UI/ui.tscn" id="7_maju4"]
[ext_resource type="PackedScene" uid="uid://ddr81bx8gf1xo" path="res://Scenes/UI/gunstats.tscn" id="8_jmiue"]
[ext_resource type="PackedScene" uid="uid://dio4jhhmyfnfk" path="res://Audio/AudioManager.tscn" id="9_tahvy"]
[ext_resource type="PackedScene" uid="uid://dj17btvmql3b7" path="res://Scenes/Upgrades/upgrade_manager.tscn" id="10_amuac"]
[ext_resource type="PackedScene" uid="uid://dfbi0qqmatkp8" path="res://Scenes/Levels/Level Objects/level_manager.tscn" id="11_0wnjg"]
[ext_resource type="PackedScene" uid="uid://c0wfnsgdnyqg6" path="res://Scenes/Levels/Level Objects/shop.tscn" id="12_fj30h"]
[ext_resource type="PackedScene" uid="uid://dq4bta30vmwew" path="res://Scenes/Upgrades/upgrade_shop_intro.tscn" id="13_5ds1u"]

[sub_resource type="TileMapPattern" id="TileMapPattern_uulbl"]
tile_data = PackedInt32Array(0, 65536, 0, 65536, 0, 0, 1, 0, 0, 65537, 65536, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e3myn"]
texture = ExtResource("3_8l7oa")
texture_region_size = Vector2i(20, 20)
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_snxtr"]
tile_size = Vector2i(20, 20)
sources/0 = SubResource("TileSetAtlasSource_e3myn")
pattern_0 = SubResource("TileMapPattern_uulbl")

[sub_resource type="GDScript" id="GDScript_sy611"]
script/source = "extends Area2D

@export var shop = preload(\"res://Scenes/Upgrades/upgrade_shop.tscn\")


func _on_area_entered(area):
	if Globals.ui.tutorial != null:
		Globals.ui.tutorial.queue_free()
	var inst = Globals.create_instance(shop, Vector2.ZERO, Globals.ui)
	var tween = create_tween()
	tween.tween_property(self, \"scale\", Vector2.ZERO, 0.2)
	tween.tween_callback(get_parent().queue_free)
"

[node name="World 1" type="Node2D"]
y_sort_enabled = true
material = ExtResource("1_7s77y")
script = ExtResource("2_fdsrf")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -100
use_parent_material = true
tile_map_data = PackedByteArray("AADu//L/AAABAAAAAADu//P/AAABAAAAAADu//T/AAABAAAAAADu//X/AAABAAAAAADu//b/AAABAAAAAADu//f/AAABAAAAAADu//j/AAABAAAAAADu//n/AAABAAAAAADu//r/AAABAAAAAADu//v/AAABAAAAAADu//z/AAABAAAAAADu//3/AAABAAAAAADu//7/AAABAAAAAADu////AAABAAAAAADu/wAAAAABAAAAAADu/wEAAAABAAAAAADu/wIAAAABAAAAAADu/wMAAAABAAAAAADu/wQAAAABAAAAAADu/wUAAAABAAAAAADu/wYAAAABAAAAAADu/wcAAAABAAAAAADu/wgAAAABAAAAAADu/wkAAAABAAAAAADu/woAAAABAAAAAADu/wsAAAABAAAAAADu/wwAAAABAAAAAADu/w0AAAABAAAAAADv//L/AAABAAAAAADv//P/AAABAAAAAADv//T/AAAAAAAAAADv//X/AAAAAAAAAADv//b/AAAAAAAAAADv//f/AAAAAAAAAADv//j/AAAAAAAAAADv//n/AAAAAAAAAADv//r/AAAAAAAAAADv//v/AAAAAAAAAADv//z/AAAAAAAAAADv//3/AAAAAAAAAADv//7/AAAAAAAAAADv////AAAAAAAAAADv/wAAAAAAAAAAAADv/wEAAAAAAAAAAADv/wIAAAAAAAAAAADv/wMAAAAAAAAAAADv/wQAAAAAAAAAAADv/wUAAAAAAAAAAADv/wYAAAAAAAAAAADv/wcAAAAAAAAAAADv/wgAAAAAAAAAAADv/wkAAAAAAAAAAADv/woAAAAAAAAAAADv/wsAAAAAAAAAAADv/wwAAAABAAAAAADv/w0AAAABAAAAAADw//L/AAABAAAAAADw//P/AAABAAAAAADw//T/AAAAAAAAAADw//X/AAAAAAAAAADw//b/AAAAAAAAAADw//f/AAAAAAAAAADw//j/AAAAAAAAAADw//n/AAAAAAAAAADw//r/AAAAAAAAAADw//v/AAAAAAAAAADw//z/AAAAAAAAAADw//3/AAAAAAAAAADw//7/AAAAAAAAAADw////AAAAAAAAAADw/wAAAAAAAAAAAADw/wEAAAAAAAAAAADw/wIAAAAAAAAAAADw/wMAAAAAAAAAAADw/wQAAAAAAAAAAADw/wUAAAAAAAAAAADw/wYAAAAAAAAAAADw/wcAAAAAAAAAAADw/wgAAAAAAAAAAADw/wkAAAAAAAAAAADw/woAAAAAAAAAAADw/wsAAAAAAAAAAADw/wwAAAABAAAAAADw/w0AAAABAAAAAADx//L/AAABAAAAAADx//P/AAABAAAAAADx//T/AAAAAAAAAADx//X/AAAAAAAAAADx//b/AAAAAAAAAADx//f/AAAAAAAAAADx//j/AAAAAAAAAADx//n/AAAAAAAAAADx//r/AAAAAAAAAADx//v/AAAAAAAAAADx//z/AAAAAAAAAADx//3/AAAAAAAAAADx//7/AAAAAAAAAADx////AAAAAAAAAADx/wAAAAAAAAAAAADx/wEAAAAAAAAAAADx/wIAAAAAAAAAAADx/wMAAAAAAAAAAADx/wQAAAAAAAAAAADx/wUAAAAAAAAAAADx/wYAAAAAAAAAAADx/wcAAAAAAAAAAADx/wgAAAAAAAAAAADx/wkAAAAAAAAAAADx/woAAAAAAAAAAADx/wsAAAAAAAAAAADx/wwAAAABAAAAAADx/w0AAAABAAAAAADy//L/AAABAAAAAADy//P/AAABAAAAAADy//T/AAAAAAAAAADy//X/AAAAAAAAAADy//b/AAAAAAAAAADy//f/AAAAAAAAAADy//j/AAAAAAAAAADy//n/AAAAAAAAAADy//r/AAAAAAAAAADy//v/AAAAAAAAAADy//z/AAAAAAAAAADy//3/AAAAAAAAAADy//7/AAAAAAAAAADy////AAAAAAAAAADy/wAAAAAAAAAAAADy/wEAAAAAAAAAAADy/wIAAAAAAAAAAADy/wMAAAAAAAAAAADy/wQAAAAAAAAAAADy/wUAAAAAAAAAAADy/wYAAAAAAAAAAADy/wcAAAAAAAAAAADy/wgAAAAAAAAAAADy/wkAAAAAAAAAAADy/woAAAAAAAAAAADy/wsAAAAAAAAAAADy/wwAAAABAAAAAADy/w0AAAABAAAAAADz//L/AAABAAAAAADz//P/AAABAAAAAADz//T/AAAAAAAAAADz//X/AAAAAAAAAADz//b/AAAAAAAAAADz//f/AAAAAAAAAADz//j/AAAAAAAAAADz//n/AAAAAAAAAADz//r/AAAAAAAAAADz//v/AAAAAAAAAADz//z/AAAAAAAAAADz//3/AAAAAAAAAADz//7/AAAAAAAAAADz////AAAAAAAAAADz/wAAAAAAAAAAAADz/wEAAAAAAAAAAADz/wIAAAAAAAAAAADz/wMAAAAAAAAAAADz/wQAAAAAAAAAAADz/wUAAAAAAAAAAADz/wYAAAAAAAAAAADz/wcAAAAAAAAAAADz/wgAAAAAAAAAAADz/wkAAAAAAAAAAADz/woAAAAAAAAAAADz/wsAAAAAAAAAAADz/wwAAAABAAAAAADz/w0AAAABAAAAAAD0//L/AAABAAAAAAD0//P/AAABAAAAAAD0//T/AAAAAAAAAAD0//X/AAAAAAAAAAD0//b/AAAAAAAAAAD0//f/AAAAAAAAAAD0//j/AAAAAAAAAAD0//n/AAAAAAAAAAD0//r/AAAAAAAAAAD0//v/AAAAAAAAAAD0//z/AAAAAAAAAAD0//3/AAAAAAAAAAD0//7/AAAAAAAAAAD0////AAAAAAAAAAD0/wAAAAAAAAAAAAD0/wEAAAAAAAAAAAD0/wIAAAAAAAAAAAD0/wMAAAAAAAAAAAD0/wQAAAAAAAAAAAD0/wUAAAAAAAAAAAD0/wYAAAAAAAAAAAD0/wcAAAAAAAAAAAD0/wgAAAAAAAAAAAD0/wkAAAAAAAAAAAD0/woAAAAAAAAAAAD0/wsAAAAAAAAAAAD0/wwAAAABAAAAAAD0/w0AAAABAAAAAAD1//L/AAABAAAAAAD1//P/AAABAAAAAAD1//T/AAAAAAAAAAD1//X/AAAAAAAAAAD1//b/AAAAAAAAAAD1//f/AAAAAAAAAAD1//j/AAAAAAAAAAD1//n/AAAAAAAAAAD1//r/AAAAAAAAAAD1//v/AAAAAAAAAAD1//z/AAAAAAAAAAD1//3/AAAAAAAAAAD1//7/AAAAAAAAAAD1////AAAAAAAAAAD1/wAAAAAAAAAAAAD1/wEAAAAAAAAAAAD1/wIAAAAAAAAAAAD1/wMAAAAAAAAAAAD1/wQAAAAAAAAAAAD1/wUAAAAAAAAAAAD1/wYAAAAAAAAAAAD1/wcAAAAAAAAAAAD1/wgAAAAAAAAAAAD1/wkAAAAAAAAAAAD1/woAAAAAAAAAAAD1/wsAAAAAAAAAAAD1/wwAAAABAAAAAAD1/w0AAAABAAAAAAD2//L/AAABAAAAAAD2//P/AAABAAAAAAD2//T/AAAAAAAAAAD2//X/AAAAAAAAAAD2//b/AAAAAAAAAAD2//f/AAAAAAAAAAD2//j/AAAAAAAAAAD2//n/AAAAAAAAAAD2//r/AAAAAAAAAAD2//v/AAAAAAAAAAD2//z/AAAAAAAAAAD2//3/AAAAAAAAAAD2//7/AAAAAAAAAAD2////AAAAAAAAAAD2/wAAAAAAAAAAAAD2/wEAAAAAAAAAAAD2/wIAAAAAAAAAAAD2/wMAAAAAAAAAAAD2/wQAAAAAAAAAAAD2/wUAAAAAAAAAAAD2/wYAAAAAAAAAAAD2/wcAAAAAAAAAAAD2/wgAAAAAAAAAAAD2/wkAAAAAAAAAAAD2/woAAAAAAAAAAAD2/wsAAAAAAAAAAAD2/wwAAAABAAAAAAD2/w0AAAABAAAAAAD3//L/AAABAAAAAAD3//P/AAABAAAAAAD3//T/AAAAAAAAAAD3//X/AAAAAAAAAAD3//b/AAAAAAAAAAD3//f/AAAAAAAAAAD3//j/AAAAAAAAAAD3//n/AAAAAAAAAAD3//r/AAAAAAAAAAD3//v/AAAAAAAAAAD3//z/AAAAAAAAAAD3//3/AAAAAAAAAAD3//7/AAAAAAAAAAD3////AAAAAAAAAAD3/wAAAAAAAAAAAAD3/wEAAAAAAAAAAAD3/wIAAAAAAAAAAAD3/wMAAAAAAAAAAAD3/wQAAAAAAAAAAAD3/wUAAAAAAAAAAAD3/wYAAAAAAAAAAAD3/wcAAAAAAAAAAAD3/wgAAAAAAAAAAAD3/wkAAAAAAAAAAAD3/woAAAAAAAAAAAD3/wsAAAAAAAAAAAD3/wwAAAABAAAAAAD3/w0AAAABAAAAAAD4//L/AAABAAAAAAD4//P/AAABAAAAAAD4//T/AAAAAAAAAAD4//X/AAAAAAAAAAD4//b/AAAAAAAAAAD4//f/AAAAAAAAAAD4//j/AAAAAAAAAAD4//n/AAAAAAAAAAD4//r/AAAAAAAAAAD4//v/AAAAAAAAAAD4//z/AAAAAAAAAAD4//3/AAAAAAAAAAD4//7/AAAAAAAAAAD4////AAAAAAAAAAD4/wAAAAAAAAAAAAD4/wEAAAAAAAAAAAD4/wIAAAAAAAAAAAD4/wMAAAAAAAAAAAD4/wQAAAAAAAAAAAD4/wUAAAAAAAAAAAD4/wYAAAAAAAAAAAD4/wcAAAAAAAAAAAD4/wgAAAAAAAAAAAD4/wkAAAAAAAAAAAD4/woAAAAAAAAAAAD4/wsAAAAAAAAAAAD4/wwAAAABAAAAAAD4/w0AAAABAAAAAAD5//L/AAABAAAAAAD5//P/AAABAAAAAAD5//T/AAAAAAAAAAD5//X/AAAAAAAAAAD5//b/AAAAAAAAAAD5//f/AAAAAAAAAAD5//j/AAAAAAAAAAD5//n/AAAAAAAAAAD5//r/AAAAAAAAAAD5//v/AAAAAAAAAAD5//z/AAAAAAAAAAD5//3/AAAAAAAAAAD5//7/AAAAAAAAAAD5////AAAAAAAAAAD5/wAAAAAAAAAAAAD5/wEAAAAAAAAAAAD5/wIAAAAAAAAAAAD5/wMAAAAAAAAAAAD5/wQAAAAAAAAAAAD5/wUAAAAAAAAAAAD5/wYAAAAAAAAAAAD5/wcAAAAAAAAAAAD5/wgAAAAAAAAAAAD5/wkAAAAAAAAAAAD5/woAAAAAAAAAAAD5/wsAAAAAAAAAAAD5/wwAAAABAAAAAAD5/w0AAAABAAAAAAD6//L/AAABAAAAAAD6//P/AAABAAAAAAD6//T/AAAAAAAAAAD6//X/AAAAAAAAAAD6//b/AAAAAAAAAAD6//f/AAAAAAAAAAD6//j/AAAAAAAAAAD6//n/AAAAAAAAAAD6//r/AAAAAAAAAAD6//v/AAAAAAAAAAD6//z/AAAAAAAAAAD6//3/AAAAAAAAAAD6//7/AAAAAAAAAAD6////AAAAAAAAAAD6/wAAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wIAAAAAAAAAAAD6/wMAAAAAAAAAAAD6/wQAAAAAAAAAAAD6/wUAAAAAAAAAAAD6/wYAAAAAAAAAAAD6/wcAAAAAAAAAAAD6/wgAAAAAAAAAAAD6/wkAAAAAAAAAAAD6/woAAAAAAAAAAAD6/wsAAAAAAAAAAAD6/wwAAAABAAAAAAD6/w0AAAABAAAAAAD7//L/AAABAAAAAAD7//P/AAABAAAAAAD7//T/AAAAAAAAAAD7//X/AAAAAAAAAAD7//b/AAAAAAAAAAD7//f/AAAAAAAAAAD7//j/AAAAAAAAAAD7//n/AAAAAAAAAAD7//r/AAAAAAAAAAD7//v/AAAAAAAAAAD7//z/AAAAAAAAAAD7//3/AAAAAAAAAAD7//7/AAAAAAAAAAD7////AAAAAAAAAAD7/wAAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wQAAAAAAAAAAAD7/wUAAAAAAAAAAAD7/wYAAAAAAAAAAAD7/wcAAAAAAAAAAAD7/wgAAAAAAAAAAAD7/wkAAAAAAAAAAAD7/woAAAAAAAAAAAD7/wsAAAAAAAAAAAD7/wwAAAABAAAAAAD7/w0AAAABAAAAAAD8//L/AAABAAAAAAD8//P/AAABAAAAAAD8//T/AAAAAAAAAAD8//X/AAAAAAAAAAD8//b/AAAAAAAAAAD8//f/AAAAAAAAAAD8//j/AAAAAAAAAAD8//n/AAAAAAAAAAD8//r/AAAAAAAAAAD8//v/AAAAAAAAAAD8//z/AAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAAAAAAAAAD8/wcAAAAAAAAAAAD8/wgAAAAAAAAAAAD8/wkAAAAAAAAAAAD8/woAAAAAAAAAAAD8/wsAAAAAAAAAAAD8/wwAAAABAAAAAAD8/w0AAAABAAAAAAD9//L/AAABAAAAAAD9//P/AAABAAAAAAD9//T/AAAAAAAAAAD9//X/AAAAAAAAAAD9//b/AAAAAAAAAAD9//f/AAAAAAAAAAD9//j/AAAAAAAAAAD9//n/AAAAAAAAAAD9//r/AAAAAAAAAAD9//v/AAAAAAAAAAD9//z/AAAAAAAAAAD9//3/AAABAAAAAAD9//7/AAABAAAAAAD9////AAABAAAAAAD9/wAAAAABAAAAAAD9/wMAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wUAAAAAAAAAAAD9/wYAAAAAAAAAAAD9/wcAAAAAAAAAAAD9/wgAAAAAAAAAAAD9/wkAAAAAAAAAAAD9/woAAAAAAAAAAAD9/wsAAAAAAAAAAAD9/wwAAAABAAAAAAD9/w0AAAABAAAAAAD+//L/AAABAAAAAAD+//P/AAABAAAAAAD+//T/AAAAAAAAAAD+//X/AAAAAAAAAAD+//b/AAAAAAAAAAD+//f/AAAAAAAAAAD+//j/AAAAAAAAAAD+//n/AAAAAAAAAAD+//r/AAAAAAAAAAD+//v/AAAAAAAAAAD+//z/AAAAAAAAAAD+//3/AAABAAAAAAD+//7/AAABAAAAAAD+////AAABAAAAAAD+/wAAAAABAAAAAAD+/wEAAAABAAAAAAD+/wIAAAABAAAAAAD+/wMAAAAAAAAAAAD+/wQAAAAAAAAAAAD+/wUAAAAAAAAAAAD+/wYAAAAAAAAAAAD+/wcAAAAAAAAAAAD+/wgAAAAAAAAAAAD+/wkAAAAAAAAAAAD+/woAAAAAAAAAAAD+/wsAAAAAAAAAAAD+/wwAAAABAAAAAAD+/w0AAAABAAAAAAD///L/AAABAAAAAAD///P/AAABAAAAAAD///T/AAAAAAAAAAD///X/AAAAAAAAAAD///b/AAAAAAAAAAD///f/AAAAAAAAAAD///j/AAAAAAAAAAD///n/AAAAAAAAAAD///r/AAAAAAAAAAD///v/AAAAAAAAAAD///z/AAAAAAAAAAD///3/AAABAAAAAAD///7/AAABAAAAAAD/////AAABAAAAAAD//wAAAAABAAAAAAD//wEAAAABAAAAAAD//wIAAAABAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD//woAAAAAAAAAAAD//wsAAAAAAAAAAAD//wwAAAABAAAAAAD//w0AAAABAAAAAAAAAPL/AAABAAAAAAAAAPP/AAABAAAAAAAAAPT/AAAAAAAAAAAAAPX/AAAAAAAAAAAAAPb/AAAAAAAAAAAAAPf/AAAAAAAAAAAAAPj/AAAAAAAAAAAAAPn/AAAAAAAAAAAAAPr/AAAAAAAAAAAAAPv/AAAAAAAAAAAAAPz/AAAAAAAAAAAAAP3/AAABAAAAAAAAAP7/AAABAAAAAAAAAP//AAABAAAAAAAAAAAAAAABAAAAAAAAAAEAAAABAAAAAAAAAAIAAAABAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAABAAAAAAAAAA0AAAABAAAAAAABAPL/AAABAAAAAAABAPP/AAABAAAAAAABAPT/AAAAAAAAAAABAPX/AAAAAAAAAAABAPb/AAAAAAAAAAABAPf/AAAAAAAAAAABAPj/AAAAAAAAAAABAPn/AAAAAAAAAAABAPr/AAAAAAAAAAABAPv/AAAAAAAAAAABAPz/AAAAAAAAAAABAP3/AAABAAAAAAABAP7/AAABAAAAAAABAP//AAABAAAAAAABAAAAAAABAAAAAAABAAEAAAABAAAAAAABAAIAAAABAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAABAAwAAAABAAAAAAABAA0AAAABAAAAAAACAPL/AAABAAAAAAACAPP/AAABAAAAAAACAPT/AAAAAAAAAAACAPX/AAAAAAAAAAACAPb/AAAAAAAAAAACAPf/AAAAAAAAAAACAPj/AAAAAAAAAAACAPn/AAAAAAAAAAACAPr/AAAAAAAAAAACAPv/AAAAAAAAAAACAPz/AAAAAAAAAAACAP3/AAABAAAAAAACAP7/AAABAAAAAAACAP//AAABAAAAAAACAAAAAAABAAAAAAACAAEAAAABAAAAAAACAAIAAAABAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAACAAwAAAABAAAAAAACAA0AAAABAAAAAAADAPL/AAABAAAAAAADAPP/AAABAAAAAAADAPT/AAAAAAAAAAADAPX/AAAAAAAAAAADAPb/AAAAAAAAAAADAPf/AAAAAAAAAAADAPj/AAAAAAAAAAADAPn/AAAAAAAAAAADAPr/AAAAAAAAAAADAPv/AAAAAAAAAAADAPz/AAAAAAAAAAADAP3/AAAAAAAAAAADAP7/AAAAAAAAAAADAP//AAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAAAAAADAAwAAAABAAAAAAADAA0AAAABAAAAAAAEAPL/AAABAAAAAAAEAPP/AAABAAAAAAAEAPT/AAAAAAAAAAAEAPX/AAAAAAAAAAAEAPb/AAAAAAAAAAAEAPf/AAAAAAAAAAAEAPj/AAAAAAAAAAAEAPn/AAAAAAAAAAAEAPr/AAAAAAAAAAAEAPv/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAP3/AAAAAAAAAAAEAP7/AAAAAAAAAAAEAP//AAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAAAAAAAAAAEAAwAAAABAAAAAAAEAA0AAAABAAAAAAAFAPL/AAABAAAAAAAFAPP/AAABAAAAAAAFAPT/AAAAAAAAAAAFAPX/AAAAAAAAAAAFAPb/AAAAAAAAAAAFAPf/AAAAAAAAAAAFAPj/AAAAAAAAAAAFAPn/AAAAAAAAAAAFAPr/AAAAAAAAAAAFAPv/AAAAAAAAAAAFAPz/AAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAFAAwAAAABAAAAAAAFAA0AAAABAAAAAAAGAPL/AAABAAAAAAAGAPP/AAABAAAAAAAGAPT/AAAAAAAAAAAGAPX/AAAAAAAAAAAGAPb/AAAAAAAAAAAGAPf/AAAAAAAAAAAGAPj/AAAAAAAAAAAGAPn/AAAAAAAAAAAGAPr/AAAAAAAAAAAGAPv/AAAAAAAAAAAGAPz/AAAAAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAGAAwAAAABAAAAAAAGAA0AAAABAAAAAAAHAPL/AAABAAAAAAAHAPP/AAABAAAAAAAHAPT/AAAAAAAAAAAHAPX/AAAAAAAAAAAHAPb/AAAAAAAAAAAHAPf/AAAAAAAAAAAHAPj/AAAAAAAAAAAHAPn/AAAAAAAAAAAHAPr/AAAAAAAAAAAHAPv/AAAAAAAAAAAHAPz/AAAAAAAAAAAHAP3/AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP//AAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAAAAAAHAAwAAAABAAAAAAAHAA0AAAABAAAAAAAIAPL/AAABAAAAAAAIAPP/AAABAAAAAAAIAPT/AAAAAAAAAAAIAPX/AAAAAAAAAAAIAPb/AAAAAAAAAAAIAPf/AAAAAAAAAAAIAPj/AAAAAAAAAAAIAPn/AAAAAAAAAAAIAPr/AAAAAAAAAAAIAPv/AAAAAAAAAAAIAPz/AAAAAAAAAAAIAP3/AAAAAAAAAAAIAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAIAAwAAAABAAAAAAAIAA0AAAABAAAAAAAJAPL/AAABAAAAAAAJAPP/AAABAAAAAAAJAPT/AAAAAAAAAAAJAPX/AAAAAAAAAAAJAPb/AAAAAAAAAAAJAPf/AAAAAAAAAAAJAPj/AAAAAAAAAAAJAPn/AAAAAAAAAAAJAPr/AAAAAAAAAAAJAPv/AAAAAAAAAAAJAPz/AAAAAAAAAAAJAP3/AAAAAAAAAAAJAP7/AAAAAAAAAAAJAP//AAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAJAAwAAAABAAAAAAAJAA0AAAABAAAAAAAKAPL/AAABAAAAAAAKAPP/AAABAAAAAAAKAPT/AAAAAAAAAAAKAPX/AAAAAAAAAAAKAPb/AAAAAAAAAAAKAPf/AAAAAAAAAAAKAPj/AAAAAAAAAAAKAPn/AAAAAAAAAAAKAPr/AAAAAAAAAAAKAPv/AAAAAAAAAAAKAPz/AAAAAAAAAAAKAP3/AAAAAAAAAAAKAP7/AAAAAAAAAAAKAP//AAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAAKAAsAAAAAAAAAAAAKAAwAAAABAAAAAAAKAA0AAAABAAAAAAALAPL/AAABAAAAAAALAPP/AAABAAAAAAALAPT/AAAAAAAAAAALAPX/AAAAAAAAAAALAPb/AAAAAAAAAAALAPf/AAAAAAAAAAALAPj/AAAAAAAAAAALAPn/AAAAAAAAAAALAPr/AAAAAAAAAAALAPv/AAAAAAAAAAALAPz/AAAAAAAAAAALAP3/AAAAAAAAAAALAP7/AAAAAAAAAAALAP//AAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAALAAsAAAAAAAAAAAALAAwAAAABAAAAAAALAA0AAAABAAAAAAAMAPL/AAABAAAAAAAMAPP/AAABAAAAAAAMAPT/AAAAAAAAAAAMAPX/AAAAAAAAAAAMAPb/AAAAAAAAAAAMAPf/AAAAAAAAAAAMAPj/AAAAAAAAAAAMAPn/AAAAAAAAAAAMAPr/AAAAAAAAAAAMAPv/AAAAAAAAAAAMAPz/AAAAAAAAAAAMAP3/AAAAAAAAAAAMAP7/AAAAAAAAAAAMAP//AAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAAMAAsAAAAAAAAAAAAMAAwAAAABAAAAAAAMAA0AAAABAAAAAAANAPL/AAABAAAAAAANAPP/AAABAAAAAAANAPT/AAAAAAAAAAANAPX/AAAAAAAAAAANAPb/AAAAAAAAAAANAPf/AAAAAAAAAAANAPj/AAAAAAAAAAANAPn/AAAAAAAAAAANAPr/AAAAAAAAAAANAPv/AAAAAAAAAAANAPz/AAAAAAAAAAANAP3/AAAAAAAAAAANAP7/AAAAAAAAAAANAP//AAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAANAAsAAAAAAAAAAAANAAwAAAABAAAAAAANAA0AAAABAAAAAAAOAPL/AAABAAAAAAAOAPP/AAABAAAAAAAOAPT/AAAAAAAAAAAOAPX/AAAAAAAAAAAOAPb/AAAAAAAAAAAOAPf/AAAAAAAAAAAOAPj/AAAAAAAAAAAOAPn/AAAAAAAAAAAOAPr/AAAAAAAAAAAOAPv/AAAAAAAAAAAOAPz/AAAAAAAAAAAOAP3/AAAAAAAAAAAOAP7/AAAAAAAAAAAOAP//AAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAwAAAABAAAAAAAOAA0AAAABAAAAAAAPAPL/AAABAAAAAAAPAPP/AAABAAAAAAAPAPT/AAAAAAAAAAAPAPX/AAAAAAAAAAAPAPb/AAAAAAAAAAAPAPf/AAAAAAAAAAAPAPj/AAAAAAAAAAAPAPn/AAAAAAAAAAAPAPr/AAAAAAAAAAAPAPv/AAAAAAAAAAAPAPz/AAAAAAAAAAAPAP3/AAAAAAAAAAAPAP7/AAAAAAAAAAAPAP//AAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAAwAAAABAAAAAAAPAA0AAAABAAAAAAAQAPL/AAABAAAAAAAQAPP/AAABAAAAAAAQAPT/AAAAAAAAAAAQAPX/AAAAAAAAAAAQAPb/AAAAAAAAAAAQAPf/AAAAAAAAAAAQAPj/AAAAAAAAAAAQAPn/AAAAAAAAAAAQAPr/AAAAAAAAAAAQAPv/AAAAAAAAAAAQAPz/AAAAAAAAAAAQAP3/AAAAAAAAAAAQAP7/AAAAAAAAAAAQAP//AAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAoAAAAAAAAAAAAQAAsAAAAAAAAAAAAQAAwAAAABAAAAAAAQAA0AAAABAAAAAAARAPL/AAABAAAAAAARAPP/AAABAAAAAAARAPT/AAABAAAAAAARAPX/AAABAAAAAAARAPb/AAABAAAAAAARAPf/AAABAAAAAAARAPj/AAABAAAAAAARAPn/AAABAAAAAAARAPr/AAABAAAAAAARAPv/AAABAAAAAAARAPz/AAABAAAAAAARAP3/AAABAAAAAAARAP7/AAABAAAAAAARAP//AAABAAAAAAARAAAAAAABAAAAAAARAAEAAAABAAAAAAARAAIAAAABAAAAAAARAAMAAAABAAAAAAARAAQAAAABAAAAAAARAAUAAAABAAAAAAARAAYAAAABAAAAAAARAAcAAAABAAAAAAARAAgAAAABAAAAAAARAAkAAAABAAAAAAARAAoAAAABAAAAAAARAAsAAAABAAAAAAARAAwAAAABAAAAAAARAA0AAAABAAAAAADs//H/AAABAAAAAADs//L/AAABAAAAAADs//P/AAABAAAAAADs//T/AAABAAAAAADs//X/AAABAAAAAADs//b/AAABAAAAAADs//f/AAABAAAAAADs//j/AAABAAAAAADs//n/AAABAAAAAADs//r/AAABAAAAAADs//v/AAABAAAAAADs//z/AAABAAAAAADs//3/AAABAAAAAADs//7/AAABAAAAAADs////AAABAAAAAADs/wAAAAABAAAAAADs/wEAAAABAAAAAADs/wIAAAABAAAAAADs/wMAAAABAAAAAADs/wQAAAABAAAAAADs/wUAAAABAAAAAADs/wYAAAABAAAAAADs/wcAAAABAAAAAADs/wgAAAABAAAAAADs/wkAAAABAAAAAADs/woAAAABAAAAAADs/wsAAAABAAAAAADs/wwAAAABAAAAAADs/w0AAAABAAAAAADs/w4AAAABAAAAAADt//H/AAABAAAAAADt//L/AAABAAAAAADt//P/AAABAAAAAADt//T/AAABAAAAAADt//X/AAABAAAAAADt//b/AAABAAAAAADt//f/AAABAAAAAADt//j/AAABAAAAAADt//n/AAABAAAAAADt//r/AAABAAAAAADt//v/AAABAAAAAADt//z/AAABAAAAAADt//3/AAABAAAAAADt//7/AAABAAAAAADt////AAABAAAAAADt/wAAAAABAAAAAADt/wEAAAABAAAAAADt/wIAAAABAAAAAADt/wMAAAABAAAAAADt/wQAAAABAAAAAADt/wUAAAABAAAAAADt/wYAAAABAAAAAADt/wcAAAABAAAAAADt/wgAAAABAAAAAADt/wkAAAABAAAAAADt/woAAAABAAAAAADt/wsAAAABAAAAAADt/wwAAAABAAAAAADt/w0AAAABAAAAAADt/w4AAAABAAAAAADu//H/AAABAAAAAADu/w4AAAABAAAAAADv//H/AAABAAAAAADv/w4AAAABAAAAAADw//H/AAABAAAAAADw/w4AAAABAAAAAADx//H/AAABAAAAAADx/w4AAAABAAAAAADy//H/AAABAAAAAADy/w4AAAABAAAAAADz//H/AAABAAAAAADz/w4AAAABAAAAAAD0//H/AAABAAAAAAD0/w4AAAABAAAAAAD1//H/AAABAAAAAAD1/w4AAAABAAAAAAD2//H/AAABAAAAAAD2/w4AAAABAAAAAAD3//H/AAABAAAAAAD3/w4AAAABAAAAAAD4//H/AAABAAAAAAD4/w4AAAABAAAAAAD5//H/AAABAAAAAAD5/w4AAAABAAAAAAD6//H/AAABAAAAAAD6/w4AAAABAAAAAAD7//H/AAABAAAAAAD7/w4AAAABAAAAAAD8//H/AAABAAAAAAD8/w4AAAABAAAAAAD9//H/AAABAAAAAAD9/w4AAAABAAAAAAD+//H/AAABAAAAAAD+/w4AAAABAAAAAAD///H/AAABAAAAAAD//w4AAAABAAAAAAAAAPH/AAABAAAAAAAAAA4AAAABAAAAAAABAPH/AAABAAAAAAABAA4AAAABAAAAAAACAPH/AAABAAAAAAACAA4AAAABAAAAAAADAPH/AAABAAAAAAADAA4AAAABAAAAAAAEAPH/AAABAAAAAAAEAA4AAAABAAAAAAAFAPH/AAABAAAAAAAFAA4AAAABAAAAAAAGAPH/AAABAAAAAAAGAA4AAAABAAAAAAAHAPH/AAABAAAAAAAHAA4AAAABAAAAAAAIAPH/AAABAAAAAAAIAA4AAAABAAAAAAAJAPH/AAABAAAAAAAJAA4AAAABAAAAAAAKAPH/AAABAAAAAAAKAA4AAAABAAAAAAALAPH/AAABAAAAAAALAA4AAAABAAAAAAAMAPH/AAABAAAAAAAMAA4AAAABAAAAAAANAPH/AAABAAAAAAANAA4AAAABAAAAAAAOAPH/AAABAAAAAAAOAA4AAAABAAAAAAAPAPH/AAABAAAAAAAPAA4AAAABAAAAAAAQAPH/AAABAAAAAAAQAA4AAAABAAAAAAARAPH/AAABAAAAAAARAA4AAAABAAAAAAASAPH/AAABAAAAAAASAPL/AAABAAAAAAASAPP/AAABAAAAAAASAPT/AAABAAAAAAASAPX/AAABAAAAAAASAPb/AAABAAAAAAASAPf/AAABAAAAAAASAPj/AAABAAAAAAASAPn/AAABAAAAAAASAPr/AAABAAAAAAASAPv/AAABAAAAAAASAPz/AAABAAAAAAASAP3/AAABAAAAAAASAP7/AAABAAAAAAASAP//AAABAAAAAAASAAAAAAABAAAAAAASAAEAAAABAAAAAAASAAIAAAABAAAAAAASAAMAAAABAAAAAAASAAQAAAABAAAAAAASAAUAAAABAAAAAAASAAYAAAABAAAAAAASAAcAAAABAAAAAAASAAgAAAABAAAAAAASAAkAAAABAAAAAAASAAoAAAABAAAAAAASAAsAAAABAAAAAAASAAwAAAABAAAAAAASAA0AAAABAAAAAAASAA4AAAABAAAAAAATAPH/AAABAAAAAAATAPL/AAABAAAAAAATAPP/AAABAAAAAAATAPT/AAABAAAAAAATAPX/AAABAAAAAAATAPb/AAABAAAAAAATAPf/AAABAAAAAAATAPj/AAABAAAAAAATAPn/AAABAAAAAAATAPr/AAABAAAAAAATAPv/AAABAAAAAAATAPz/AAABAAAAAAATAP3/AAABAAAAAAATAP7/AAABAAAAAAATAP//AAABAAAAAAATAAAAAAABAAAAAAATAAEAAAABAAAAAAATAAIAAAABAAAAAAATAAMAAAABAAAAAAATAAQAAAABAAAAAAATAAUAAAABAAAAAAATAAYAAAABAAAAAAATAAcAAAABAAAAAAATAAgAAAABAAAAAAATAAkAAAABAAAAAAATAAoAAAABAAAAAAATAAsAAAABAAAAAAATAAwAAAABAAAAAAATAA0AAAABAAAAAAATAA4AAAABAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD9/wEAAAABAAAAAAD9/wIAAAABAAAAAAA=")
tile_set = SubResource("TileSet_snxtr")

[node name="PlayerSpawner" type="Node2D" parent="."]
position = Vector2(0, 29)

[node name="EnemySpawnerController" parent="." instance=ExtResource("4_ut8nn")]

[node name="BarrierLeft" type="Node2D" parent="."]
position = Vector2(-400, -300)

[node name="BarrierRight" type="Node2D" parent="."]
position = Vector2(400, 300)

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_pupo2")

[node name="DeathMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_1pnk5")
volume_db = 4.0

[node name="ShopUI" type="CanvasLayer" parent="."]
layer = 2

[node name="UI" parent="." instance=ExtResource("7_maju4")]

[node name="Gunstats" parent="UI" node_paths=PackedStringArray("gui_layer") instance=ExtResource("8_jmiue")]
visible = false
z_index = 900
offset_left = -120.0
offset_top = 17.0
offset_right = -120.0
offset_bottom = 17.0
gui_layer = NodePath("..")

[node name="DeathUI" type="Node2D" parent="."]

[node name="AudioManager" parent="." instance=ExtResource("9_tahvy")]

[node name="UpgradeManager" parent="." instance=ExtResource("10_amuac")]

[node name="LevelManager" parent="." instance=ExtResource("11_0wnjg")]

[node name="Gun Shop" parent="." instance=ExtResource("12_fj30h")]
position = Vector2(0, -19)

[node name="Area2D" parent="Gun Shop" index="4"]
script = SubResource("GDScript_sy611")
shop = ExtResource("13_5ds1u")

[editable path="Gun Shop"]
